@@ -21,9 +21,11 @@ DOS_VOLUME_ID = deb00001
 # string.
 DOS_VOLUME_LABEL = "Debian Inst"
 
+BOOTPICS=boot/i386/pics
+
 # The image to use for a syslinux splash screen.
-#SPLASH_RLE=boot/i386/pics/nicholson.rle
-SPLASH_RLE=boot/i386/pics/klowner.rle
+#SPLASH_RLE=nicholson.rle
+SPLASH_RLE=klowner.rle
 
 # Create a bootable image.
 # 1. make a dos filesystem image
@@ -51,7 +53,7 @@ arch_boot:
 		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" \
 		       < $(IMG) | mcopy -i$(TEMP_BOOT) - ::`basename $(IMG)`;)
 	if [ -n "$(SPLASH_RLE)" ]; then \
-		mcopy -i$(TEMP_BOOT) $(SPLASH_RLE) ::splash.rle; \
+		mcopy -i$(TEMP_BOOT) $(BOOTPICS)/$(SPLASH_RLE) ::splash.rle; \
 	fi
 	syslinux $(SYSLINUX_OPTS) $(TEMP_BOOT)
 	$(if $(GZIPPED),gzip -v9f $(TEMP_BOOT))
@@ -70,9 +72,22 @@ arch_root:
 	mcopy -i$(TEMP_ROOT) $(TEMP)/disk.lbl ::disk.lbl
 	$(if $(GZIPPED),gzip -v9f $(TEMP_ROOT))
 
-# Miniture CD image with only boot image on it.
+# Create syslinux/isolinux help screens for debian-cd to use, and include
+# a boot logo too.
+.PHONY: arch_debian_cd_info
+arch_debian_cd_info:
+	rm -f $(TEMP_DEBIAN_CD_INFO)/* || true
+	mkdir -p $(TEMP_DEBIAN_CD_INFO)
+	$(foreach IMG,$(wildcard boot/i386/*.txt), \
+		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" \
+		       < $(IMG) > $(TEMP_DEBIAN_CD_INFO)/`basename $(IMG)`;)
+	if [ -n "$(SPLASH_RLE)" ]; then \
+		cp $(BOOTPICS)/$(SPLASH_RLE) $(TEMP_DEBIAN_CD_INFO)/splash.rle; \
+	fi
+
+# Miniature CD image with only boot image on it.
 .PHONY: arch_miniiso
 arch_miniiso:
-	mkdir -p $(TEMP)/iso
-	ln -f $(TEMP_BOOT) $(TEMP)/iso/boot.img
-	mkisofs -r -J -b `basename $(TEMP_BOOT)` -o $(TEMP_MINIISO) $(TEMP)/iso
+	mkdir -p $(CD_IMAGE_TREE)
+	ln -f $(TEMP_BOOT) $(CD_IMAGE_TREE)/boot.img
+	mkisofs -r -J -b `basename $(TEMP_BOOT)` -o $(TEMP_MINIISO) $(CD_IMAGE_TREE)
